<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/riddleimageView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/solutionpic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black_white_gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="backToRiddle"
                android:src="@drawable/backselector" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/solution"
                android:textAppearance="@style/TitleStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/solutionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:editable="false"
            android:gravity="left"
            android:text="@string/text_really_solution"
            android:textAppearance="@style/FontStyle" />

        <Button
            android:id="@+id/reallySolutionButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/btn_really_solution" />

    </LinearLayout>

</ScrollView>