<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <requestFocus />

    <ScrollView
        android:id="@+id/riddleScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/riddleimageView1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/picture02" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:onClick="backToToc"
                    android:src="@drawable/backselector" />

                <TextView
                    android:id="@+id/riddleTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TitleStyle" />

            </LinearLayout>

            <TextView
                android:id="@+id/riddleText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:editable="false"
                android:textAppearance="@style/FontStyle" />

            <EditText
                android:id="@+id/riddleNotepad"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:editable="true"
                android:gravity="top"
                android:hint="@string/notepad_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <Button
                android:id="@+id/riddlehints_btn"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/solution" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_margin="40dp"
                android:background="@color/infoText" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:editable="false"
                android:gravity="center"
                android:text="@string/riddleGetAnother"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:typeface="serif" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/previousriddle_btn"
                    style="@style/FontStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btnselector"
                    android:text="@string/riddleprev_btn" />

                <Button
                    android:id="@+id/rdmriddle_btn"
                    style="@style/FontStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btnselector"
                    android:text="@string/riddlerdm_btn" />

                <Button
                    android:id="@+id/nextriddle_btn"
                    style="@style/FontStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btnselector"
                    android:text="@string/riddlenext_btn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:onClick="backToToc"
                    android:src="@drawable/backselector" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>